자바 21로 변경